@@ -46,12 +46,13 @@
           <words>Largo </words>
           </direction-type>
         <direction-type>
-          <metronome parentheses="yes">
+          <metronome parentheses="no">
             <beat-unit>quarter</beat-unit>
-            <per-minute>50</per-minute>
+            <beat-unit-dot/>
+            <per-minute>40</per-minute>
             </metronome>
           </direction-type>
-        <sound tempo="50"/>
+        <sound tempo="60"/>
         </direction>
       <note>
         <pitch>
@@ -325,6 +326,16 @@
         </note>
       </measure>
     <measure number="7">
+      <direction placement="above">
+        <direction-type>
+          <metronome parentheses="no">
+            <beat-unit>quarter</beat-unit>
+            <beat-unit-dot/>
+            <beat-unit>half</beat-unit>
+            <beat-unit-dot/>
+            </metronome>
+          </direction-type>
+        </direction>
       <note>
         <pitch>
           <step>C</step>
