@@ -1,3 +1,5 @@
+16.nov. (lv)
+      - more work on MusicXML <metronome>
 15.nov. (la)
       - fix "can't add dot to rest outside note entry"
       - fix bar line cut crash
